@@ -1,1 +1,1 @@
-CollaborationInfrastructure 2.5
+CollaborationInfrastructure 2.6
